# fast_fractal_compression

./: CMakeLists.txt  compare_with_jpeg.ipynb  main.cpp  readme.md
include/: common.h  compressor.h  constants.h  decompressor.h  image.h  interface.h  io.h  metrics.h  propagation.h  utils.h
src/: common.cpp  compressor.cpp  decompressor.cpp  image.cpp  match.cpp  metrics.cpp  propagation.cpp  serialize.cpp
